# GoL

./: CMakeLists.txt  main.c  main.h
graphics/: Makefile  doc_uvsqgraphics.tex  graphics.c  graphics.h  makeuvsq.sh
